...

    <!-- Auth system -->
    <string name="auth_signin">Sign in</string>
    <string name="auth_signout">Sign out</string>
    <string name="sign_in_error">Could not sign in</string>
    <string name="sign_out_success">Sign out successful</string>
    <string name="invalid_email_address">Invalid email address</string>

    <!-- Preferences keys -->
    <string name="pref_key_latitude" translatable="false">latitude</string>
    <string name="pref_key_longitude" translatable="false">longitude</string>
    <string name="pref_key_zoom" translatable="false">zoom</string>
    <string name="pref_key_gps_refresh_rate" translatable="false">gps_refresh</string>
...
    <string name="map_ready" translatable="false">MAP READY</string>
    <string name="map_not_ready" translatable="false">MAP NOT READY</string>
    <string name="map_downloading" translatable="false">MAP DOWNLOADING</string>
    <string name="map_deleting" translatable="false">MAP DELETING</string>

    <!-- Map Activity -->
    <string name="intent_key_group_id" translatable="false">group_id</string>
    <string name="intent_key_role" translatable="false">role</string>
    <string name="intent_key_offline_mode" translatable="false">offline_mode</string>

    <string name="drone_home_error">No Home Available</string>
    <string name="drone_user_error">User position not available</string>
    <string name="drone_user_success">Returning to user</string>
...
