package ch.epfl.sdp.ui.search_group.edition

import android.content.Intent
import androidx.arch.core.executor.testing.InstantTaskExecutorRule
import androidx.lifecycle.MutableLiveData
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.intent.rule.IntentsTestRule
import androidx.test.espresso.matcher.ViewMatchers.hasErrorText
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.internal.runner.junit4.statement.UiThreadStatement
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.uiautomator.UiDevice
import ch.epfl.sdp.MainApplication
import ch.epfl.sdp.R
import ch.epfl.sdp.database.data.SearchGroupData
import ch.epfl.sdp.database.data_manager.MainDataManager
import ch.epfl.sdp.database.providers.HeatmapRepositoryProvider
import ch.epfl.sdp.database.providers.MarkerRepositoryProvider
import ch.epfl.sdp.database.providers.SearchGroupRepositoryProvider
import ch.epfl.sdp.database.providers.UserRepositoryProvider
import ch.epfl.sdp.database.repository.*
import ch.epfl.sdp.utils.Auth
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.mockito.Mockito

@RunWith(AndroidJUnit4::class)
class AddUserDialogFragmentTest {

    companion object {
        private const val FAKE_ACCOUNT_ID = "fake_account_id"
        private const val DUMMY_GROUP_ID = "DummyGroupId"
        private const val DUMMY_GROUP_NAME = "DummyGroupName"
        private const val VALID_DUMMY_EMAIL = "DummyGroupId@gmail.com"
        private const val EMPTY_DUMMY_EMAIL = ""
        private const val INVALID_DUMMY_EMAIL = "gg@ dec.co.uk"
        private const val DUMMY_ACTUAL_USER_EMAIL = "yep@gmail.com"
    }

    private lateinit var mUiDevice: UiDevice
    private val intentWithGroupAndOperator = Intent()
            .putExtra(MainApplication.applicationContext().getString(R.string.intent_key_group_id), DUMMY_GROUP_ID)

    @get:Rule
    val instantTaskExecutorRule = InstantTaskExecutorRule()

    @get:Rule
    var mActivityRule = IntentsTestRule(
            SearchGroupEditionActivity::class.java,
            true,
            false) // Activity is not launched immediately

    private lateinit var mockSearchGroupRepo: ISearchGroupRepository
    private lateinit var mockHeatmapRepo: IHeatmapRepository
    private lateinit var mockMarkerRepo: IMarkerRepository
    private lateinit var mockUserRepo: IUserRepository

    @Before
    @Throws(Exception::class)
    fun before() {
        //Fake login
        UiThreadStatement.runOnUiThread {
            Auth.accountId.value = FAKE_ACCOUNT_ID
            Auth.email.value = DUMMY_ACTUAL_USER_EMAIL
            Auth.loggedIn.value = true
        }

        mockSearchGroupRepo = Mockito.mock(ISearchGroupRepository::class.java)
        mockHeatmapRepo = Mockito.mock(IHeatmapRepository::class.java)
        mockMarkerRepo = Mockito.mock(IMarkerRepository::class.java)
        mockUserRepo = Mockito.mock(IUserRepository::class.java)

        Mockito.`when`(mockUserRepo.getGroupIdsOfUserByEmail(DUMMY_ACTUAL_USER_EMAIL)).thenReturn(MutableLiveData(mapOf()))
        Mockito.`when`(mockSearchGroupRepo.getGroupById(DUMMY_GROUP_ID)).thenReturn(MutableLiveData(SearchGroupData(DUMMY_GROUP_ID, DUMMY_GROUP_NAME)))
        Mockito.`when`(mockUserRepo.getRescuersOfSearchGroup(DUMMY_GROUP_ID)).thenReturn(MutableLiveData(setOf()))
        Mockito.`when`(mockUserRepo.getOperatorsOfSearchGroup(DUMMY_GROUP_ID)).thenReturn(MutableLiveData(setOf()))

        SearchGroupRepositoryProvider.provide = { mockSearchGroupRepo }
        UserRepositoryProvider.provide = { mockUserRepo }
        MarkerRepositoryProvider.provide = { mockMarkerRepo }
        HeatmapRepositoryProvider.provide = { mockHeatmapRepo }

        mUiDevice = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation())
    }

    @After
    fun cleanup() {
        SearchGroupRepositoryProvider.provide = { SearchGroupRepository() }
        UserRepositoryProvider.provide = { UserRepository() }
        MarkerRepositoryProvider.provide = { MarkerRepository() }
        HeatmapRepositoryProvider.provide = { HeatmapRepository() }
    }

    @Test
    fun whenValidateDialogWithInvalidEmailDoNotAccept() {
        mActivityRule.launchActivity(intentWithGroupAndOperator)

        onView(withId(R.id.group_edit_add_operator_button)).perform(click())

        onView(withId(R.id.add_user_email_address)).perform(typeText(INVALID_DUMMY_EMAIL))
        mUiDevice.pressBack()
        onView(withId(R.id.dialog_add_user)).perform(click())

        onView(withId(R.id.add_user_email_address)).check(matches(hasErrorText(mActivityRule.activity.getString(R.string.invalid_email_address))))
    }

    @Test
    fun whenValidateDialogWithEmptyEmailDoNotAccept() {
        mActivityRule.launchActivity(intentWithGroupAndOperator)

        onView(withId(R.id.group_edit_add_operator_button)).perform(click())

        onView(withId(R.id.add_user_email_address)).perform(typeText(EMPTY_DUMMY_EMAIL))
        onView(withId(R.id.dialog_add_user)).perform(click())

        onView(withId(R.id.add_user_email_address)).check(matches(hasErrorText(mActivityRule.activity.getString(R.string.invalid_email_address))))
    }

    @Test
    fun whenValidateDialogWithValidEmailAccept() {
        mActivityRule.launchActivity(intentWithGroupAndOperator)

        onView(withId(R.id.group_edit_add_operator_button)).perform(click())

        onView(withId(R.id.add_user_email_address)).perform(typeText(VALID_DUMMY_EMAIL))
        mUiDevice.pressBack()
        onView(withId(R.id.dialog_add_user)).perform(click())

        onView(withId(R.id.dialog_add_user)).check(doesNotExist())
    }

    @Test
    fun whenCancelDialogThenDismissDialog() {
        mActivityRule.launchActivity(intentWithGroupAndOperator)

        onView(withId(R.id.group_edit_add_operator_button)).perform(click())
        onView(withId(R.id.dialog_cancel_add_user)).perform(click())

        onView(withId(R.id.dialog_add_user)).check(doesNotExist())
    }
}